// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormComboBox renders with no options by default 1`] = `

<div class="container"
     role="none"
>
  <div role="combobox"
       aria-expanded="true"
       aria-owns="test-combobox-options"
       aria-haspopup="listbox"
       class="govuk-form-group"
  >
    <label class="govuk-label"
           for="test-combobox-input"
    >
      Choose option
    </label>
    <input type="text"
           aria-autocomplete="list"
           aria-controls="test-combobox-options"
           class="govuk-input"
           id="test-combobox-input"
           value
    >
  </div>
</div>

`;

exports[`FormComboBox renders with options in correct order when input changes 1`] = `

<div class="container"
     role="none"
>
  <div role="combobox"
       aria-expanded="true"
       aria-owns="test-combobox-options"
       aria-haspopup="listbox"
       class="govuk-form-group"
  >
    <label class="govuk-label"
           for="test-combobox-input"
    >
      Choose option
    </label>
    <input type="text"
           aria-autocomplete="list"
           aria-controls="test-combobox-options"
           class="govuk-input"
           id="test-combobox-input"
           value="Test"
    >
    <div class="optionsContainer">
      <ul class="options"
          id="test-combobox-options"
          role="listbox"
          tabindex="-1"
      >
        <li aria-selected="false"
            id="test-combobox-option-0"
            role="option"
        >
          Option 1
        </li>
        <li aria-selected="false"
            id="test-combobox-option-1"
            role="option"
        >
          Option 2
        </li>
        <li aria-selected="false"
            id="test-combobox-option-2"
            role="option"
        >
          Option 3
        </li>
      </ul>
    </div>
  </div>
</div>

`;
